--- a/client/src/components/css/checkout.css
+++ b/client/src/components/css/checkout.css
@@ -28,4 +28,9 @@
   color: #fff;
   cursor: pointer;
 }
+
+.checkout .btn__bottom {
+  padding: 10px;
+  margin: 50px auto;
+}
 /*# sourceMappingURL=checkout.css.map */
