--- a/client/src/components/css/checkout.css
+++ b/client/src/components/css/checkout.css
@@ -28,17 +28,26 @@
   text-align: center;
   width: 100%;
   margin: 15px 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .checkout .btn button {
   width: 50%;
-  background-color: #171613;
-  color: #fff;
   cursor: pointer;
+  margin: 5px;
 }
 
-.checkout .btn__bottom {
-  padding: 10px;
-  margin: 50px auto;
+.checkout .btn .checkout__btn {
+  background-color: #171613;
+  color: #fff;
 }
 /*# sourceMappingURL=checkout.css.map */
