--- a/client/src/components/css/checkout.scss
+++ b/client/src/components/css/checkout.scss
@@ -23,15 +23,17 @@
         text-align: center;
         width: 100%;
         margin: 15px 0 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         button{
             width: 50%;
+            cursor: pointer;
+            margin: 5px;
+        }
+        .checkout__btn{
             background-color: #171613;
             color: #fff;
-            cursor: pointer;
         }
-    }
-    .btn__bottom{
-        padding: 10px;
-        margin: 50px auto;
     }
 }
