--- a/client/src/components/css/success.scss
+++ b/client/src/components/css/success.scss
@@ -1,30 +1,61 @@
 .success{
-    width: 95%;
-    margin: 20px auto;
     .container{
         text-align: center;
+        width: 95%;
+        margin: 20px auto;
         padding: 10px;
-        .success__icon{
-            svg{
-                font-size: 46px;
-                color: green;
+        .success__content{
+            .success__icon{
+                svg{
+                    font-size: 46px;
+                    color: green;
+                }
             }
-        }
-        h1{
-            text-transform: capitalize;
-        }
-        p{
-            margin-top: 10px;
-            line-height: 1.2em;
-        }
-        .btn{
-            margin: 20px 0;
-            button{
-                background-color: #131714;
-                color: #fff;
-                cursor: pointer;
+            h1{
+                text-transform: capitalize;
+            }
+            p{
+                margin-top: 10px;
+                line-height: 1.2em;
+            }
+            .btn{
+                margin: 20px 0;
+                button{
+                    background-color: #131714;
+                    color: #fff;
+                    cursor: pointer;
+                }
             }
         }
 
+        .order{
+            margin: 80px 0 30px ;
+            .order__title{
+                h1{
+                    margin: 20px 0;
+                    text-align: left;
+                    border-bottom: 1px solid rgba($color: #979696, $alpha: 0.6);
+                    text-transform: capitalize;
+                }
+                .content{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    h3{
+                        text-align: left;
+                        text-transform: capitalize;
+                        padding-bottom: 15px;
+                        font-weight: 500;
+                        color: rgb(10, 9, 9);
+                    }
+                    p{
+                        font-size: 14px;
+                    }
+                    .total{
+                        margin-right: 20px;
+                    }
+                }
+            }
+        }
     }
 }
