--- a/client/src/components/css/success.css
+++ b/client/src/components/css/success.css
@@ -14,6 +14,10 @@
   text-transform: capitalize;
 }
 
+.success .container .success__content h1 span {
+  font-style: italic;
+}
+
 .success .container .success__content p {
   margin-top: 10px;
   line-height: 1.2em;
@@ -29,13 +33,37 @@
   cursor: pointer;
 }
 
+.success .container .address {
+  margin: 30px 0;
+}
+
+.success .container .address .address__title h2 {
+  margin: 20px 0;
+  text-transform: capitalize;
+  border-bottom: 1px solid rgba(151, 150, 150, 0.6);
+}
+
+.success .container .address .content ul {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.success .container .address .content ul li {
+  list-style: none;
+  margin: 10px 0;
+}
+
+.success .container .address .content ul .postal__code {
+  text-transform: uppercase;
+}
+
 .success .container .order {
   margin: 80px 0 30px;
 }
 
-.success .container .order .order__title h1 {
+.success .container .order .order__title h2 {
   margin: 20px 0;
-  text-align: left;
   border-bottom: 1px solid rgba(151, 150, 150, 0.6);
   text-transform: capitalize;
 }
