--- a/client/src/components/css/success.scss
+++ b/client/src/components/css/success.scss
@@ -13,6 +13,9 @@
             }
             h1{
                 text-transform: capitalize;
+                span{
+                    font-style: italic;
+                }
             }
             p{
                 margin-top: 10px;
@@ -28,12 +31,36 @@
             }
         }
 
+        .address{
+            margin: 30px 0;
+            .address__title{
+                h2{
+                    margin: 20px 0;
+                    text-transform: capitalize;
+                    border-bottom: 1px solid rgba($color: #979696, $alpha: 0.6);
+                }
+            }
+            .content{
+                ul{
+                    margin: 0;
+                    padding: 0;
+                    text-align: center;
+                    li{
+                        list-style: none;
+                        margin: 10px 0;
+                    }
+                    .postal__code{
+                        text-transform: uppercase;
+                    }
+                }
+            }
+        }
+
         .order{
             margin: 80px 0 30px ;
             .order__title{
-                h1{
+                h2{
                     margin: 20px 0;
-                    text-align: left;
                     border-bottom: 1px solid rgba($color: #979696, $alpha: 0.6);
                     text-transform: capitalize;
                 }
