--- a/client/src/components/css/checkout.css
+++ b/client/src/components/css/checkout.css
@@ -1,5 +1,7 @@
 .checkout {
+  width: 100%;
   margin: 10px 0 30px;
+  overflow: hidden;
 }
 
 .checkout .title {
@@ -24,7 +26,7 @@
   color: #f75454;
 }
 
-.checkout .btn {
+.checkout .form__div {
   text-align: center;
   width: 100%;
   margin: 15px 0 30px;
@@ -40,13 +42,24 @@
           align-items: center;
 }
 
-.checkout .btn button {
-  width: 50%;
+.checkout .form__div form {
+  width: 100%;
+}
+
+.checkout .form__div form input {
+  width: 70%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 7px;
+}
+
+.checkout .form__div form .btn__div button {
+  width: 70%;
   cursor: pointer;
   margin: 5px;
 }
 
-.checkout .btn .checkout__btn {
+.checkout .form__div form .btn__div .checkout__btn {
   background-color: #171613;
   color: #fff;
 }
