--- a/client/src/components/css/Nav.css
+++ b/client/src/components/css/Nav.css
@@ -161,7 +161,7 @@
 }
 
 .nav .container .menu .auth__pages {
-  margin: 20px 0 10px;
+  margin: 30px 0 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -194,6 +194,62 @@
 
 .nav .container .menu .auth__pages .btn svg {
   color: #272727;
+}
+
+.nav .container .menu .auth__pages .user {
+  width: 100%;
+}
+
+.nav .container .menu .auth__pages .user .wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav .container .menu .auth__pages .user .wrapper .group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav .container .menu .auth__pages .user .wrapper .group h4 {
+  text-transform: capitalize;
+  font-weight: normal;
+}
+
+.nav .container .menu .auth__pages .user .wrapper button {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.nav .container .menu .auth__pages .user .my__account {
+  width: 100%;
+  background-color: #dbdbdb;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.nav .container .menu .auth__pages .user .my__account button {
+  padding-left: 7px;
 }
 
 .nav .container .flash__sale {
