--- a/client/src/components/css/Nav.scss
+++ b/client/src/components/css/Nav.scss
@@ -114,7 +114,7 @@
                 }
             }
             .auth__pages{
-                margin: 20px 0 10px;
+                margin: 30px 0 10px;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
@@ -132,6 +132,39 @@
                     }
                     svg{
                         color: #272727;
+                    }
+                }
+                .user{
+                    width: 100%;
+                    .wrapper{
+                        width: 100%;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        .group{
+                            display: flex;
+                            align-items: center;
+                            h4{
+                                text-transform: capitalize;
+                                font-weight: normal;
+                            }
+                        }
+                        button{
+                            text-decoration: underline;
+                            cursor: pointer;
+                        }
+                    }
+                    .my__account{
+                        width: 100%;
+                        background-color: rgb(219, 219, 219);
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 10px;
+                        cursor: pointer;
+                        button{
+                            padding-left: 7px;
+                        }
                     }
                 }
             }
