--- a/client/src/components/css/ProductDetail.css
+++ b/client/src/components/css/ProductDetail.css
@@ -1,26 +1,9 @@
 .product__detail {
   margin: 0px 0 30px;
-  padding: 10px;
+  padding: 10px 15px;
 }
 
-.product__detail .product__title .group {
-  text-align: center;
-  text-transform: capitalize;
-  color: #313131;
-  margin-top: 10px;
-}
-
-.product__detail .product__title .group p {
-  text-transform: capitalize;
-  font-size: 26px;
-  font-weight: 500;
-}
-
-.product__detail .product__title .group h3 {
-  font-weight: 500;
-}
-
-.product__detail .product__title .back__arrow {
+.product__detail .back__arrow {
   color: #03036d;
   text-decoration: underline;
   display: -webkit-box;
@@ -32,15 +15,34 @@
   cursor: pointer;
 }
 
-.product__detail .product__title .back__arrow svg {
+.product__detail .back__arrow svg {
   margin-right: -7px;
+}
+
+.product__detail .product__title {
+  margin: 20px 0;
+}
+
+.product__detail .product__title .group {
+  text-align: left;
+  text-transform: capitalize;
+  color: #313131;
+}
+
+.product__detail .product__title .group p {
+  text-transform: capitalize;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.product__detail .product__title .group h3 {
+  font-weight: 500;
 }
 
 .product__detail .img {
   margin-top: 10px;
   position: relative;
   width: 100%;
-  padding: 0 10px;
 }
 
 .product__detail .img .default__img img {
