--- a/client/src/components/css/ProductDetail.scss
+++ b/client/src/components/css/ProductDetail.scss
@@ -1,16 +1,26 @@
 .product__detail{
     margin: 0px 0 30px ;
-    padding: 10px;
+    padding: 10px 15px;
 
+    .back__arrow{
+        color: rgb(3, 3, 109);
+        text-decoration: underline;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        svg{
+            margin-right: -7px;
+        }
+    }
     .product__title{
+        margin: 20px 0;
         .group{
-            text-align: center;
+            text-align: left;
             text-transform: capitalize;
             color: #313131;
-            margin-top: 10px;
             p{
                 text-transform: capitalize;
-                font-size: 26px;
+                font-size: 20px;
                 font-weight: 500;
             }
             h3{
@@ -18,22 +28,11 @@
             }
             
         }
-        .back__arrow{
-            color: rgb(3, 3, 109);
-            text-decoration: underline;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-            svg{
-                margin-right: -7px;
-            }
-        }
     }
     .img{
         margin-top: 10px;
         position: relative;
         width: 100%;
-        padding: 0 10px;
         .default__img{
             img{
                 cursor: pointer;
