--- a/client/src/components/pages/auth/css/login.scss
+++ b/client/src/components/pages/auth/css/login.scss
@@ -55,6 +55,7 @@
                     width: 100%;
                     p{
                         color: rgb(255, 0, 0);
+                        font-size: 14px;
                     }
                 }
 
