--- a/client/src/components/pages/auth/css/signup.scss
+++ b/client/src/components/pages/auth/css/signup.scss
@@ -109,6 +109,11 @@
                 margin: 20px 0 10px;
                 font-size: 14px;
                 line-height: 1.5em;
+                input{
+                    margin-top: 10px;
+                    width: 24px;
+                    height: 24px;
+                }
             }
 
         }
